# kogase

./: .cursorignore  .env.example  .gitignore  .gitmodules  INSTALL.md  Makefile  README.md  dev.ps1  dev.sh  docker-compose.dev.yaml  docker-compose.yaml  healthcheck.ps1  healthcheck.sh  install-kogase.sh  install.ps1  install.sh  setup.ps1  setup.sh  test-install.sh
backend/: .env  (+7 more)
engine/: .env  .gitignore  Cargo.toml  Dockerfile  Kogase.sln  README.md  docker-compose.yml
engine/Kogase.Engine/: Kogase.Engine.csproj  Kogase.Engine.http  Program.cs  appsettings.json
engine/Kogase.Engine/Controllers/: AnalyticsController.cs  AuthController.cs  DocsController.cs  HealthController.cs  ProjectsController.cs  TelemetryController.cs
engine/Kogase.Engine/Data/: KogaseDbContext.cs
engine/Kogase.Engine/Extensions/: ControllerExtensions.cs  MigrationExtensions.cs
engine/Kogase.Engine/Middleware/: ApiKeyAuthMiddleware.cs  ApiKeyAuthMiddlewareExtensions.cs
engine/Kogase.Engine/Migrations/: 20250325223920_InitialCreate.Designer.cs  20250325223920_InitialCreate.cs  KogaseDbContextModelSnapshot.cs
engine/Kogase.Engine/Models/: ApiResponse.cs  AuthToken.cs  Device.cs  Event.cs  Metric.cs  Project.cs  ProjectUser.cs  Session.cs  User.cs
engine/Kogase.Engine/Properties/: launchSettings.json
engine/Kogase.Engine/Services/: ApiKeyService.cs  MetricAggregationService.cs  PasswordService.cs  TokenService.cs
engine/entity/: Cargo.toml
engine/entity/src/: lib.rs  prelude.rs
engine/migration/: Cargo.toml
engine/migration/src/: lib.rs  m20250326_000001_create_users_table.rs  m20250326_000002_create_auth_tokens_table.rs  m20250326_000003_create_projects_table.rs  m20250326_000004_create_project_users_table.rs  m20250326_000005_create_devices_table.rs  m20250326_000006_create_events_table.rs  m20250326_000007_create_metrics_table.rs
engine/src/: main.rs
engine/src/api/: auth.rs  events.rs  metrics.rs  mod.rs  projects.rs  users.rs
engine/src/config/: mod.rs
engine/src/db/: mod.rs
engine/src/models/: auth.rs  events.rs  metrics.rs  mod.rs  projects.rs  users.rs
engine/src/utils/: auth.rs  errors.rs  geo.rs  mod.rs  swagger.rs
(+86 files in other folders)
