[package]
name = "engine"
version = "0.1.0"
edition = "2024"
authors = ["Kogase Team"]
description = "Backend for game telemetry system"

[dependencies]
# Web framework
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-rt = "2.9.0"

# Authentication
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Database
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros", "with-uuid", "with-chrono", "with-json"] }
migration = { path = "migration" }
entity = { path = "entity" }

# Serialization & Validation
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
validator = { version = "0.16.1", features = ["derive"] }

# Environment
dotenv = "0.15.0"

# Logging
log = "0.4.21"
env_logger = "0.11.2"

# Date and time
chrono = { version = "0.4.35", features = ["serde"] }

# GeoIP
maxminddb = "0.24.0"

# Utility
thiserror = "1.0.58"
async-trait = "0.1.78"
futures = "0.3.30"
strum = "0.26.1"
strum_macros = "0.26.1"

# Documentation
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }

# Utilities
anyhow = "1.0.81"
rand = "0.8.5"
validator = { version = "0.16.1", features = ["derive"] }
maxminddb = "0.23.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
async-trait = "0.1.77"

[dev-dependencies]
mockall = "0.12.1"
actix-rt = "2.9.0"
tokio = { version = "1.36.0", features = ["full"] }
