[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.115"

[dependencies.sea-orm]
version = "0.12.14"
features = [
  "sqlx-postgres",
  "runtime-actix-native-tls",
  "macros",
  "with-uuid",
  "with-chrono",
  "with-json",
] 